--- a/e3grid/template-e3.html
+++ b/e3grid/template-e3.html
@@ -17,8 +17,8 @@
             <div class="row slider-wrapper">
                 <!-- top-navbar -->
                 <div class="col-12 col-lg-10 offset-lg-2 top-navbar">Logo</div>
-                <!-- slider-lead -->
-                <div class="col-12 col-md-8 col-lg-6 offset-lg-2 slider-lead-content">
+                <!-- slider-lead left -->
+                <div class="col-12 col-md-6 col-lg-5 offset-lg-2 slider-lead-content">
                     <!-- slider-heading -->
                     <h1 class="slider-heading">
                         The goal of e3 is to insire...
@@ -28,14 +28,20 @@
                         100% of the learners to complete school and 100% of these learners to study further, get a job, or start their own enterprises</p>
                     <!-- slider-controles - buttons -->
                 </div>
-                <!--Slider image -->
-                <div class="col-md-4 slider-lead-images d-none d-md-block">image</div>
+                <!--Slider image right -->
+                <img src="./images/03.png" class="col-md-6 col-lg-5 d-none d-md-block img-fluid slider-lead-image" alt="Responsive image">
             </div>
             <!-- partners-section-->
             <div class="row partners-section">
-                <div class="col-sm-2 col-3 offset-lg-2 partners-image">1</div>
-                <div class="col-sm-2 col-3 partners-image">2</div>
-                <div class="col-sm-2 col-3 partners-image">3</div>
+                <div class="col-sm-2 col-3 offset-lg-2 partners-image">
+                    <img src="./images/Logo_DBE.png" class="img-fluid" alt="Responsive image">
+                </div>
+                <div class="col-sm-2 col-3 partners-image">
+                    <img src="./images/Logo_read.png" class="img-fluid" alt="Responsive image">
+                </div>
+                <div class="col-sm-2 col-3 partners-image">
+                    <img src="./images/Logo_NDP.png" class="img-fluid" alt="Responsive image">
+                </div>
             </div>
             <!-- contact-form-section -->
             <div class="row contact-form-section">
@@ -75,11 +81,11 @@
                     <div class="row">
                         <!-- Map -->
                         <div class="col-12 media-map">
-                            map
+                            <img src="./images/map.png" class="img-fluid" alt="Responsive image">
                         </div>
                         <!-- Pattern -->
                         <div class="col-12 media-pattern">
-                            pattern
+                            <img src="./images/Pattern_03.png" class="img-fluid" alt="Responsive image">
                         </div>
                     </div>
                 </div>
